--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-  <div class="container">
-    <img src="assets/images/image-omelette.jpeg">
+  <main>
+    <img src="assets/images/image-omelette.jpeg" alt="Image of omelette">
     <h1 class="heading">Simple Omelette Recipe</h1>
 
     <p class="para">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
@@ -89,6 +89,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/IshitaSoni/RecipePage">Ishita</a>.
-  </div>
+  </main>
 </body>
 </html>
